# py-interview

./: .gitignore  check.sh  main.py  pyproject.toml
tests/: test_main.py
