[project]
name = "py-interview"
version = "0.1.0"
description = "minimal setup for an interview in Python"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S113", "S605", "S607", "S608"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
