[project]
name = "py-interview"
version = "0.1.0"
description = "minimal setup for an interview in Python"
requires-python = ">=3.13"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest>=9.0.3",
    "sortedcontainers-stubs>=2.4.3",
    "types-python-dateutil>=2.9.0.20260518",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S113", "S605", "S607", "S608"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
